Add changelog and refactored settings page. Settings are not overwritten anymore on new version

--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -11,7 +11,7 @@
   <button mat-icon-button [routerLink]="'history'">
     <mat-icon>manage_search</mat-icon>
   </button>
-  <button mat-icon-button (click)="openDialog()">
+  <button mat-icon-button (click)="openSettingsDialog()">
     <mat-icon>settings</mat-icon>
   </button>
 </mat-toolbar>
