--- a/Client/src/ogn/components/settings/settings.component.scss
+++ b/Client/src/ogn/components/settings/settings.component.scss
@@ -1,20 +1,38 @@
-.card {
-    height: 100%;
+.version-number {
+  float: right;
+}
+
+.container {
+    padding: 16px 16px 0px 16px;
 }
 
 .title {
-    font-size: large;
+    font-size: 18px;
     font-weight: 500;
 }
 
+.subtitle {
+  font-size: 14px;
+  font-weight: 500;
+}
+
 .section {
-    margin-bottom: 20px;
+    margin-bottom: 16px;
 }
 
 .group {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; 
+    align-items: flex-start;
+    margin-bottom: 4px;
+}
+
+.reduce-margin-top {
+  margin-top: -6px;
+}
+
+.reduce-margin-top-slightly {
+  margin-top: -3px;
 }
 
 .mt-1 {
@@ -24,7 +42,3 @@
 .mt-2 {
     margin-top: 20px;
 }
-
-mat-card {
-    margin-bottom: 15px;
-  }
