--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -1,10 +1,19 @@
 <h1 mat-dialog-title>Neue Version: v{{versionNumber}}</h1>
 <div class="content">
-  <ul>
-    <li>Changelog wird bei neuer App-Version angezeigt</li>
-    <li>Einstellungen: Aktivieren / Deaktivieren vom Changelog</li>
-    <li>Einstellungen werden jetzt bei neuer App-Version beibehalten</li>
-  </ul>
+  <!-- <div class="section">
+    <span class="section-title">0.2.0</span>
+    <ul class="changelist">
+    </ul>
+  </div> -->
+  <div class="section">
+    <span class="section-title">0.1.1</span>
+    <ul class="changelist">
+      <li>Neue Standardkarte: Gelände (Stamen)</li>
+      <li>Changelog wird bei neuer App-Version angezeigt</li>
+      <li>Einstellungen: Aktivieren / Deaktivieren vom Changelog</li>
+      <li>Einstellungen werden jetzt bei neuer App-Version beibehalten</li>
+    </ul>
+  </div>
 </div>
 <mat-dialog-actions align="center" class="action-button-container">
     <button mat-raised-button color="primary" mat-dialog-close>Danke Matthias</button>
