--- a/Client/src/app/components/changelog/changelog.component.scss
+++ b/Client/src/app/components/changelog/changelog.component.scss
@@ -5,6 +5,20 @@
   overflow: scroll;
 }
 
+.section {
+
+}
+
+.section-title {
+  margin-left: 24px;
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.changelist {
+  margin-top: 6px;
+}
+
 .action-button-container {
   margin-top: 5px;
 }
