Add new marker color scheme to highlight known gliders

--- a/Client/src/ogn/components/settings/settings.component.scss
+++ b/Client/src/ogn/components/settings/settings.component.scss
@@ -35,6 +35,14 @@
   margin-top: -3px;
 }
 
+.increase-margin-top {
+  margin-top: 8px;
+}
+
+.increase-margin-top-slightly {
+  margin-top: 3px;
+}
+
 .mt-1 {
     margin-top: 10px;
 }
