--- a/Client/src/ogn/components/settings/settings.component.html
+++ b/Client/src/ogn/components/settings/settings.component.html
@@ -18,6 +18,15 @@
       <mat-checkbox [(ngModel)]="settings.hideGlidersOnGround" (change)="save()">Flugzeuge am Boden ausblenden</mat-checkbox>
 
       <div class="group" style="margin-top: 4px;">
+        <span class="subtitle">Marker Farbschema</span>
+        <mat-radio-group class="group" [(ngModel)]="settings.markerColorScheme" (change)="save()">
+            <mat-radio-button [value]="0">Vereinsflugzeuge hervorheben</mat-radio-button>
+            <mat-radio-button disabled class="reduce-margin-top" [value]="1">Je nach Flughöhe</mat-radio-button>
+            <mat-radio-button class="reduce-margin-top" [value]="2">Nur Blau (ursprünglich)</mat-radio-button>
+        </mat-radio-group>
+      </div>
+
+      <div class="group" style="margin-top: 4px;">
         <span class="subtitle">Flugweg</span>
         <mat-checkbox [(ngModel)]="settings.useFlightPathSmoothing" (change)="save()">Flugweg abrunden (keine harten Ecken)</mat-checkbox>
       </div>
