--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -5,6 +5,7 @@
     <ul class="changelist">
       <li>Neues Marker Farbschema: Vereinsflugzeuge hervorheben</li>
       <li>Einstellungen: Umschalten zwischen altem und neuem Marker Farbschema</li>
+      <li>Einstellungen: Update Häufigkeit</li>
     </ul>
   </div>
   <div class="section">
