--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -1,6 +1,18 @@
 <h1 mat-dialog-title>Neue Version: v{{versionNumber}}</h1>
 <div class="content">
   <div class="section">
+    <span class="section-title">0.2.0</span>
+    <ul class="changelist">
+      <li>Datenverbrauch deutlich verringert</li>
+      <ul class="sub-changelist">
+        <li>Nur Flugzeuge im sichtbaren Bereich werden geladen</li>
+        <li>Bei Filterung "Nur Vereinsflugzeuge" werden auch nur Vereinsflugzeuge geladen</li>
+      </ul>
+      <li>Private Flugzeuge werden als eigene Farbe auf der Karte dargestellt</li>
+      <li>Einstellungen: Nur aktuellen / letzten Flug auf der Karte anzeigen</li>
+    </ul>
+  </div>
+  <div class="section">
     <span class="section-title">0.1.3</span>
     <ul class="changelist">
       <li>Neues Marker Farbschema: Vereinsflugzeuge hervorheben</li>
