--- a/Client/src/app/components/changelog/changelog.component.scss
+++ b/Client/src/app/components/changelog/changelog.component.scss
@@ -19,6 +19,11 @@
   margin-top: 6px;
 }
 
+.sub-changelist {
+  margin-top: 6px;
+  margin-left: -16px;
+}
+
 .action-button-container {
   margin-top: 5px;
 }
