--- a/Client/src/app/app.component.scss
+++ b/Client/src/app/app.component.scss
@@ -1,5 +1,6 @@
-.toolbar {
-  height: 64px;
+.logo {
+  height: 40px;
+  margin-right: 20px;
 }
 
 .content-mobile {
@@ -9,7 +10,19 @@
 
 .content-desktop {
   height: calc(100% - 64px);
-  overflow: scroll;
+  //overflow: scroll;
+}
+
+.toolbar-button {
+  margin-right: 6px;
+  height: 45px;
+}
+
+.larger-icon {
+  font-size: 23px !important; /* Adjust the icon size as needed */
+  height: 23px !important;
+  width: 23px !important;
+  margin-bottom: 2px;
 }
 
 ::ng-deep .mat-mdc-snack-bar-container {
