--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -8,8 +8,9 @@
         <li>Nur Flugzeuge im sichtbaren Bereich werden geladen</li>
         <li>Bei Filterung "Nur Vereinsflugzeuge" werden auch nur Vereinsflugzeuge geladen</li>
       </ul>
-      <li>Private Flugzeuge werden als eigene Farbe auf der Karte dargestellt</li>
+      <li>Position im Barogramm wird am Flugpfad markiert</li>
       <li>Einstellungen: Nur aktuellen / letzten Flug auf der Karte anzeigen</li>
+      <li>Private Flugzeuge werden als eigene Farbe auf der Karte dargestellt</li>
     </ul>
   </div>
   <div class="section">
