Selected marker is white

--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -11,6 +11,7 @@
       <li>Position im Barogramm wird am Flugpfad markiert</li>
       <li>Einstellungen: Nur aktuellen / letzten Flug auf der Karte anzeigen</li>
       <li>Private Flugzeuge werden als eigene Farbe auf der Karte dargestellt</li>
+      <li>Ausgewählter Marker ist weiß</li>
     </ul>
   </div>
   <div class="section">
