--- a/Client/src/ogn/components/settings-dialog/settings-dialog.component.scss
+++ b/Client/src/ogn/components/settings-dialog/settings-dialog.component.scss
@@ -4,6 +4,11 @@
     align-items: flex-start;
 }
 
+.container {
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
 .mt-1 {
     margin-top: 10px;
 }
