--- a/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
+++ b/Client/src/app/components/bottom-navigation/bottom-navigation.component.html
@@ -4,11 +4,11 @@
         <mat-icon class="icon">public</mat-icon>
         <span>Karte</span>
     </a>
-    <a routerLink="/list" routerLinkActive="active" class="nav-item">
+    <a routerLink="/status" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">flight</mat-icon>
         <span>Flugzeuge</span>
     </a>
-    <a routerLink="/history" routerLinkActive="active" class="nav-item">
+    <a routerLink="/departures" routerLinkActive="active" class="nav-item">
         <mat-icon class="icon">manage_search</mat-icon>
         <span>Startliste</span>
     </a>
