--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -12,6 +12,7 @@
       <li>Einstellungen: Nur aktuellen / letzten Flug auf der Karte anzeigen</li>
       <li>Private Flugzeuge werden als eigene Farbe auf der Karte dargestellt</li>
       <li>Ausgewählter Marker ist weiß</li>
+      <li>Support für Desktop und Tablets</li>
     </ul>
   </div>
   <div class="section">
