--- a/Client/src/app/app.component.html
+++ b/Client/src/app/app.component.html
@@ -9,10 +9,10 @@
     <button mat-icon-button [routerLink]="'map'">
       <mat-icon>public</mat-icon>
     </button>
-    <button mat-icon-button [routerLink]="'list'">
+    <button mat-icon-button [routerLink]="'status'">
       <mat-icon>flight</mat-icon>
     </button>
-    <button mat-icon-button [routerLink]="'history'">
+    <button mat-icon-button [routerLink]="'departures'">
       <mat-icon>manage_search</mat-icon>
     </button>
     <button mat-icon-button (click)="openSettingsDialog()">
@@ -25,11 +25,11 @@
       <mat-icon class="larger-icon">public</mat-icon>
       <span>Karte</span>
     </button>
-    <button mat-button [routerLink]="'list'" class="toolbar-button">
+    <button mat-button [routerLink]="'status'" class="toolbar-button">
       <mat-icon class="larger-icon">flight</mat-icon>
       <span>Flugzeuge</span>
     </button>
-    <button mat-button [routerLink]="'history'" class="toolbar-button">
+    <button mat-button [routerLink]="'departures'" class="toolbar-button">
       <mat-icon class="larger-icon">manage_search</mat-icon>
       <span>Startliste</span>
     </button>
