--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -1,6 +1,12 @@
 <h1 mat-dialog-title>Neue Version: v{{versionNumber}}</h1>
 <div class="content">
   <div class="section">
+    <span class="section-title">0.2.2</span>
+    <ul class="changelist">
+      <li>Karte: Vereinsflugzeuge werden immer über unbekannten Flugzeugen angezeigt</li>
+    </ul>
+  </div>
+  <div class="section">
     <span class="section-title">0.2.1</span>
     <ul class="changelist">
       <li>Bug Fix: Verzögertes Rendern vom Marker beim Fokus setzen und entfernen</li>
