--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -1,9 +1,14 @@
 <h1 mat-dialog-title>Neue Version: v{{versionNumber}}</h1>
 <div class="content">
   <div class="section">
-    <span class="section-title">0.2.2</span>
+    <span class="section-title">0.3.0</span>
     <ul class="changelist">
-      <li>Karte: Vereinsflugzeuge werden immer über unbekannten Flugzeugen angezeigt</li>
+      <li>Startliste: Wechsel zwischen UTC und Lokalzeit möglich</li>
+      <li>Neues optionales Farbschema: Luftfahrzeugtypen (Glide and Seek)</li>
+      <li>Optionale Einstellung: Nur Segelflugzeuge (Standardmäßig werden jetzt alle Luftfahrzeuge angezeigt)</li>
+      <li>Option "Nur aktuellen Flug anzeigen" in der Infobox hinzugefügt</li>
+      <li>D-KRES, OE-9466 und OE-CBB werden jetzt auch unter "Nur Vereinsflugzeuge" angezeigt und Rot markiert</li>
+      <li>Nur mehr Flugzeuge im österreichischen Luftraum werden geladen</li>
     </ul>
   </div>
   <div class="section">
