--- a/Client/src/ogn/components/departure-list/departure-list.component.scss
+++ b/Client/src/ogn/components/departure-list/departure-list.component.scss
@@ -96,3 +96,20 @@ table {
   font-size: large;
   font-weight: 500;
 }
+
+.sticky {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  display: inline-block;
+  width: 100%;
+}
+
+.settings-bar {
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  -webkit-box-shadow: 0px 2px 12px -8px rgba(0,0,0,0.8);
+  -moz-box-shadow: 0px 2px 12px -8px rgba(0,0,0,0.8);
+  box-shadow: 0px 2px 12px -8px rgba(0,0,0,0.8);
+}
