New color scheme: altitude

--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -4,6 +4,7 @@
     <span class="section-title">0.3.0</span>
     <ul class="changelist">
       <li>Startliste: Wechsel zwischen UTC und Lokalzeit möglich</li>
+      <li>Neues optionales Farbschema: Flughöhe</li>
       <li>Neues optionales Farbschema: Luftfahrzeugtypen (Glide and Seek)</li>
       <li>Optionale Einstellung: Nur Segelflugzeuge (Standardmäßig werden jetzt alle Luftfahrzeuge angezeigt)</li>
       <li>Option "Nur aktuellen Flug anzeigen" in der Infobox hinzugefügt</li>
