Improved settings, add mobile data save mode

--- a/Client/src/app/components/changelog/changelog.component.html
+++ b/Client/src/app/components/changelog/changelog.component.html
@@ -6,8 +6,9 @@
       <li>Startliste: Wechsel zwischen UTC und Lokalzeit möglich</li>
       <li>Neues optionales Farbschema: Flughöhe</li>
       <li>Neues optionales Farbschema: Luftfahrzeugtypen (Glide and Seek)</li>
-      <li>Optionale Einstellung: Nur Segelflugzeuge (Standardmäßig werden jetzt alle Luftfahrzeuge angezeigt)</li>
-      <li>Option "Nur aktuellen Flug anzeigen" in der Infobox hinzugefügt</li>
+      <li>Neue Filtermöglichkeit: Segelflugzeuge / Alle Luftfahrzeuge</li>
+      <li>Neue Option "Nur aktuellen Flug anzeigen" in der Infobox</li>
+      <li>Neue Option: Datenverbrauch reduzieren</li>
       <li>D-KRES, OE-9466 und OE-CBB werden jetzt auch unter "Nur Vereinsflugzeuge" angezeigt und Rot markiert</li>
       <li>Nur mehr Flugzeuge im österreichischen Luftraum werden geladen</li>
     </ul>
