--- a/Client/src/ogn/components/settings/settings.component.html
+++ b/Client/src/ogn/components/settings/settings.component.html
@@ -12,10 +12,10 @@
       <mat-radio-group class="group" [(ngModel)]="settings.gliderFilterOnMap" (change)="save()">
           <mat-radio-button [value]="0">Nur Vereinsflugzeuge</mat-radio-button>
           <mat-radio-button class="reduce-margin-top-slightly" [value]="1">Vereinsflugzeuge & Private Flugzeuge von Mitgliedern</mat-radio-button>
-          <mat-radio-button class="reduce-margin-top-slightly" [value]="2">Alle Flugzeuge</mat-radio-button>
+          <mat-radio-button class="reduce-margin-top-slightly" [value]="2">Alle Segelflugzeuge</mat-radio-button>
+          <mat-radio-button class="reduce-margin-top" [value]="3">Alle Luftfahrzeuge</mat-radio-button>
       </mat-radio-group>
       <div class="group">
-        <mat-checkbox [(ngModel)]="settings.showGlidersOnly" (change)="save()">Nur Segelflugzeuge anzeigen</mat-checkbox>
         <mat-checkbox [(ngModel)]="settings.hideGlidersOnGround" class="reduce-margin-top" (change)="save()">Flugzeuge am Boden ausblenden</mat-checkbox>
       </div>
 
@@ -42,18 +42,9 @@
     </div>
     <div class="section">
       <div class="group">
-        <p class="title">Update der Daten</p>
-        <mat-radio-group class="group" [(ngModel)]="settings.updateTimeout" (change)="save()">
-          <mat-radio-button [value]="3000">Schnell (Alle 3 Sekunden)</mat-radio-button>
-          <mat-radio-button class="reduce-margin-top" [value]="5000">Normal (Alle 5 Sekunden)</mat-radio-button>
-          <mat-radio-button class="reduce-margin-top" [value]="10000">Daten sparen (Alle 10 Sekunden)</mat-radio-button>
-      </mat-radio-group>
-      </div>
-    </div>
-    <div class="section">
-      <div class="group">
         <p class="title">Sonstiges</p>
         <mat-checkbox [(ngModel)]="settings.showChangelogForNewVersion" (change)="save()">Änderungen bei neuer Version anzeigen</mat-checkbox>
+        <mat-checkbox [(ngModel)]="settings.reduceDataUsage" class="reduce-margin-top" (change)="save()">Datenverbrauch reduzieren</mat-checkbox>
       </div>
     </div>
 </div>
